@@ -60,8 +60,8 @@ bool CGUIWindowVideoActors::OnMessage(CGUIMessage& message)
 
 bool CGUIWindowVideoActors::GetDirectory(const CStdString &strDirectory, CFileItemList &items)
 {
-  m_vecItems.m_strPath = strDirectory;
-  if (m_vecItems.IsVirtualDirectoryRoot())
+  items.m_strPath = strDirectory;
+  if (items.IsVirtualDirectoryRoot())
   {
     VECMOVIEACTORS actors;
     m_database.GetActors(actors, m_iShowMode);
@@ -73,56 +73,24 @@ bool CGUIWindowVideoActors::GetDirectory(const CStdString &strDirectory, CFileIt
       pItem->m_strPath = actors[i];
       pItem->m_bIsFolder = true;
       pItem->m_bIsShareOrDrive = false;
-      m_vecItems.Add(pItem);
+      items.Add(pItem);
     }
-    m_vecItems.m_strPath = "";
   }
   else
   {
+    // add the parent item
     if (m_guiState.get() && !m_guiState->HideParentDirItems())
     {
       CFileItem *pItem = new CFileItem("..");
       pItem->m_strPath = "";
       pItem->m_bIsFolder = true;
       pItem->m_bIsShareOrDrive = false;
-      m_vecItems.Add(pItem);
+      items.Add(pItem);
     }
     VECMOVIES movies;
-    m_database.GetMoviesByActor(m_vecItems.m_strPath, movies);
-    for (int i = 0; i < (int)movies.size(); ++i)
-    {
-      CIMDBMovie movie = movies[i];
-      // add the appropiate movies to m_vecItems based on the showmode
-      if (
-        (m_iShowMode == VIDEO_SHOW_ALL) ||
-        (m_iShowMode == VIDEO_SHOW_WATCHED && movie.m_bWatched == true) ||
-        (m_iShowMode == VIDEO_SHOW_UNWATCHED && movie.m_bWatched == false)
-        )
-      {
-        // mark watched movies when showing all
-        CStdString strTitle = movie.m_strTitle;
-        CFileItem *pItem = new CFileItem(strTitle);
-        pItem->m_strTitle=strTitle;
-        pItem->m_strPath = movie.m_strFileNameAndPath;
-        pItem->m_bIsFolder = false;
-        pItem->m_bIsShareOrDrive = false;
-        pItem->SetThumb();
-        
-        if (!pItem->HasThumbnail())
-        {
-          CStdString strThumb;
-          CUtil::GetVideoThumbnail(movie.m_strIMDBNumber, strThumb);
-          if (CFile::Exists(strThumb))
-            pItem->SetThumbnailImage(strThumb);
-        }
-        pItem->m_fRating = movie.m_fRating;
-        pItem->m_stTime.wYear = movie.m_iYear;
-        pItem->SetOverlayImage(CGUIListItem::ICON_OVERLAY_UNWATCHED,movie.m_bWatched);
-        m_vecItems.Add(pItem);
-      }
-    }
+    m_database.GetMoviesByActor(items.m_strPath, movies);
+    SetDatabaseDirectory(movies, items);
   }
-
   return true;
 }
 
